--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ Elm Architecture
 </a>
 <small><time>Sep 18, 2021</time></small>
 <small>note</small>
-<div class=summary>main value is what gets shown on screen. Think of it as the high-level description of our program.
-main = Browser....</div>
+<div class=summary>Elm is a functional language that compiles to JavaScript.
+main value is what gets shown on screen. Think of it as the high-level description of our program....</div>
 </li>
 </ul>
 </main><footer id=footer>
