--- a/notes/good-enough-software/index.html
+++ b/notes/good-enough-software/index.html
@@ -32,7 +32,7 @@
 <header id=post-header>
 <h1>Good Enough Software</h1>
 <div>
-Updated <time>September 18, 2021</time>
+Updated <time>September 19, 2021</time>
 </div>
 </header><p>Ben Franklin says that your <strong>knowledge</strong> and <strong>experience</strong> are your most important day-to-day professional asset. <em>Depreciating</em> assets.</p>
 <p>New techniques, languages, and environments are being developed as we speak and the ever changing market can render your experience into irrelevancy.</p>
@@ -80,7 +80,7 @@ Anything you put in your portfolio should be accurate and unswayed by either ven
 <li><strong>When or where would this work</strong> : Is it too late? early? under what circumstances? Don&rsquo;t stop with first order thinking, what will happen after that?</li>
 <li><strong>Why is this a problem</strong> : Is there an underlying model? how does that model work?</li>
 </ul>
-<p>Act! Immediately finishing this chapter, <a href=%22/notes/elm-architecture.md%22>I learnt Elm</a>.</p>
+<p>Act! Immediately finishing this chapter, <a href=%22./elm-architecture.md%22>I learnt Elm</a>.</p>
 </article>
 </main><footer id=footer>
 Copyright © 2021 Cafwin
