--- a/notes/index.html
+++ b/notes/index.html
@@ -30,8 +30,8 @@
 Elm Architecture
 </a>
 <small><time>Sep 18, 2021</time></small>
-<div class=summary>main value is what gets shown on screen. Think of it as the high-level description of our program.
-main = Browser.</div>
+<div class=summary>Elm is a functional language that compiles to JavaScript.
+main value is what gets shown on screen. Think of it as the high-level description of our program.</div>
 </li>
 <li>
 <a href=https://cafwin.github.io/notes/good-enough-software/>
